services/semaphore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: authelia-add-https@kubernetescrd,authelia-authelia-forwardauth@kubernetescrd
  name: semaphore
  namespace: semaphore
spec:
  ingressClassName: traefik
  rules:
  - host: ops.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: semaphore
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: ops.homelab.local
    http:
      paths:
      - backend:
          service:
            name: semaphore
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ops.completeautomate.com
    - ops.homelab.local
